--- a/public/index.css
+++ b/public/index.css
@@ -1,87 +1,72 @@
-html, body {
-	height: 100%;
-  background-color: #ffffff;
-  text-align: center;
-  margin: 0;
-}
-
-* {
-	font-family: Helvetica, Arial, sans-serif;
-  box-sizing: border-box;
-}
-
-#app {
-	position: relative;
-	height: 100%;
-	width: 100%;
-	padding: 8px;
-}
-
-h1 {
-  margin: 8px 0;
-}
-
-form {
-  display: flex;
-  flex-direction: column;
-  position: relative;
-}
-
-input,
-textarea {
-  padding: 5px;
-}
-
-form button {
-  position: absolute;
-  top: 0;
-  right: 0;
-  padding: 5px;
-}
-
-ul {
-  list-style: none;
-  text-align: center;
-}
-
-ul {
-  padding: 0;
-}
-
-li {
-  background-color: Cornsilk;
-  border: 1px solid BurlyWood;
-  border-radius: 5px 2px;
-  margin: 8px 0;
-}
-
-li div {
-  position: relative;
-}
-
-li div button {
-  position: absolute;
-  top: 0;
-  right: 0;
-  background-color: transparent;
-  border: 0;
-  padding: 10px;
-  font-weight: bolder;
-  cursor: pointer;
-  border-radius: 5px;
-}
-
-li div button:hover,
-li div button:focus {
-  box-shadow: 0 0 1px black;
-}
-
-li h2 {
-  background-color: NavajoWhite;
-  margin: 0;
-  padding: 4px;
-}
-
-li p {
-  margin: 8px;
-}
+body {
+    margin: 0;
+    font-size: 16pt;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+      'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+      sans-serif;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+  }
+  
+  input,
+  button {
+    font: inherit;
+    box-sizing: border-box;
+  }
+  
+  input[type='submit'],
+  button {
+    cursor: pointer;
+  }
+  
+  .App {
+    margin: 0 auto;
+    max-width: 600px;
+    width: 95%;
+  }
+  
+  .App h1:before {
+    content: '💭';
+    margin-right: 0.5em;
+  }
+  
+  .AddThoughtForm {
+    display: flex;
+    flex-wrap: wrap;
+  }
+  
+  .AddThoughtForm input {
+    padding: 1.5rem;
+    border: 1px solid #666;
+    border-radius: 3px;
+  }
+  
+  .AddThoughtForm input[type='text'] {
+    flex-grow: 1;
+    margin-right: 0.5rem;
+  }
+  
+  .thoughts {
+    list-style-type: none;
+    padding: 0;
+  }
+  
+  .Thought {
+    padding: 1rem;
+    margin-bottom: 1rem;
+    border-radius: 3px;
+    background-color: #eee;
+  }
+  
+  .Thought .remove-button {
+    font-size: 80%;
+    float: right;
+    border: 0;
+    border-radius: 3px;
+    background: transparent;
+  }
+  
+  .Thought .remove-button:hover {
+    color: #fff;
+    background-color: #000;
+  }
